fixed some issues and did some enhancements.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preload" as="font" href="./src/assets/fonts/IntegralCF-Bold.woff" type="font/woff" crossorigin="anonymous">
+    <link rel="preload" as="font" href="./src/assets/fonts/satoshi/Satoshi-Bold.woff" type="font/woff" crossorigin="anonymous">
+    <link rel="preload" as="font" href="./src/assets/fonts/satoshi/Satoshi-Medium.woff" type="font/woff" 
+    crossorigin="anonymous">
+    <link rel="preload" as="font" href="./src/assets/fonts/satoshi/Satoshi-Regular.woff" type="font/woff" 
+    crossorigin="anonymous">
+    <link rel="preload" as="image" href="./src/assets/ccfd8aa5825862cdb9604a4fb4930464 (1).jpg">
+    <link rel="preload" as="image" href="./src/assets/Vector.svg">
+    <link rel="preload" as="image" href="./src/assets/cartblack.svg">
+    <link rel="preload" as="image" href="./src/assets/profile.svg">
+
     <title>Clothi</title>
   </head>
   <body>
